# Synthetic-data-generator

./: .env.example  .gitignore  AGENT_TESTING_SUMMARY.md  BEHAVE_TROUBLESHOOTING_GUIDE.md  CHANGELOG.md  CHANGES.md  CLAUDE_REASONING_TEST_REPORT.md  COMPLEX_PROMPT_TESTING_REPORT.md  FEATURE_GUIDE.md  IMPLEMENTATION_PLAN.md  LICENSE  PLAYWRIGHT_TO_BDD_CONVERSION_GUIDE.md  PROJECT_SUMMARY.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  REQUIREMENTS_COMPLIANCE_REPORT.md  SETUP_SUMMARY.md  SKILLS.md  STREAMLIT_README.md  TESTING_REPORT.md  TEST_REPORT.md  USABILITY_TEST_REPORT.md  pyproject.toml  streamlit_app.py  test_agent_manual.py  test_fixes.py  test_simple_ui.py  test_ui_functionality.py
.claude/skills/: README.md
.claude/skills/data-validation/: SKILL.md
.claude/skills/data-visualization/: SKILL.md
.claude/skills/docx/: SKILL.md
.claude/skills/pdf/: SKILL.md
.claude/skills/pptx/: SKILL.md
.claude/skills/privacy-checker/: SKILL.md
.claude/skills/relational-mapper/: SKILL.md
.claude/skills/schema-inference/: SKILL.md
.claude/skills/statistical-analysis/: SKILL.md
.claude/skills/xlsx/: SKILL.md
config/: agent_config.yaml  default_config.yaml
docs/: AGENT_SDK_GUIDE.md
examples/agent/: README.md  basic_usage.py  custom_hooks.py  programmatic_generation.py
examples/bdd-conversion/: README.md  environment.py  herokuapp_test-dample_2025-11-23.py
features/: demo_local.feature  environment.py  herokuapp_test-dample_2025-11-23.feature
features/steps/: demo_local_steps.py  herokuapp_test_steps.py
output/: test_data.csv  test_data.json
src/synth_agent/: __init__.py  __main__.py
src/synth_agent/agent/: __init__.py  client.py  hooks.py  state.py  tools.py
src/synth_agent/analysis/: __init__.py  ambiguity_detector.py  deep_pattern_analyzer.py  pattern_analyzer.py  requirement_parser.py
src/synth_agent/cli/: __init__.py  app.py  nlp_app.py
src/synth_agent/conversation/: __init__.py  manager.py
src/synth_agent/core/: __init__.py  config.py  exceptions.py  session.py
src/synth_agent/formats/: __init__.py  avro_handler.py  base.py  csv_handler.py  excel_handler.py  json_handler.py  manager.py  parquet_handler.py  sql_handler.py  xml_handler.py
src/synth_agent/generation/: __init__.py  engine.py  modes.py  relational.py
src/synth_agent/llm/: __init__.py  anthropic_provider.py  base.py  manager.py  openai_provider.py  prompts.py
src/synth_agent/reasoning/: __init__.py  astar_reasoner.py  base.py  beam_search_reasoner.py  best_first_search.py  chain_of_thought.py  engine.py  graph_of_thoughts.py  iterative_refinement.py  mcts_reasoner.py  meta_prompting.py  metrics.py  react_reasoner.py  reflexion_reasoner.py  self_consistency.py  strategy_selector.py  tree_of_thoughts.py
src/synth_agent/storage/: __init__.py  azure_storage.py  base.py  gcs_storage.py  manager.py  s3_storage.py
src/synth_agent/utils/: __init__.py  file_validator.py  helpers.py
src/synth_agent/validation/: __init__.py  (+1 more)
tests/: complex_prompt_test_results.json  conftest.py  manual_complex_prompt_test.py  run_complex_tests.py  test_agent_behavior.py  test_agent_complex_prompts.py  test_agent_sdk_compliance.py  test_analysis.py  test_claude_reasoning_exhaustive.py  test_config.py  test_exceptions.py  test_formats.py  test_session.py  test_usability_manual.py
tests/component/: test_llm_integration.py
tests/fixtures/: __init__.py  reasoning_fixtures.py
tests/integration/: test_data_pipeline.py  test_reasoning_integration.py
tests/unit/: test_config.py  test_exceptions.py  test_file_validator.py.skip  test_formats.py  test_generation_engine.py.skip  test_helpers.py  test_llm_providers.py.skip  test_new_formats.py  test_reasoning.py.skip  test_reasoning_engine.py  test_reasoning_modules.py  test_reasoning_tools.py  test_relational_generator.py  test_session_resume.py  test_storage.py.skip  test_strategy_selector.py  test_validation.py.skip
